DPC-1060: UI Fixes (#633)
* fix overlapping drop down arrows

* top nav visited links easier to read

* fix blue box responsive design

--- a/dpc-web/app/assets/stylesheets/components/_navbar.scss
+++ b/dpc-web/app/assets/stylesheets/components/_navbar.scss
@@ -203,7 +203,7 @@
   text-decoration: none;
 
   @media (min-width: $width-nav) {
-    color: white;
+    color: $color-white;
   }
 }
 
@@ -212,6 +212,10 @@
     color: $color-primary-alt-lightest;
     text-decoration: underline;
   }
+}
+
+.topnav__dropdown__link:visited {
+  color: $color-white;
 }
 
 // Overrides for accorion functionality
